@@ -38,7 +38,6 @@ packaging {
 
     app.jvmOpts = ['-Xms512m',
                    '-Xmx1g',
-                   '--enable-preview',
                    '-Dfile.encoding=UTF-8',
                    '-Duser.language=en',
                    '--add-modules', 'ALL-MODULE-PATH',
